--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/web-05.loader.js";
+      var loaderUrl = buildUrl + "/web-06.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web-05.data.gz",
-        frameworkUrl: buildUrl + "/web-05.framework.js.gz",
-        codeUrl: buildUrl + "/web-05.wasm.gz",
+        dataUrl: buildUrl + "/web-06.data",
+        frameworkUrl: buildUrl + "/web-06.framework.js",
+        codeUrl: buildUrl + "/web-06.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
