--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/web-08.loader.js";
+      var loaderUrl = buildUrl + "/01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web-08.data",
-        frameworkUrl: buildUrl + "/web-08.framework.js",
-        codeUrl: buildUrl + "/web-08.wasm",
+        dataUrl: buildUrl + "/01.data",
+        frameworkUrl: buildUrl + "/01.framework.js",
+        codeUrl: buildUrl + "/01.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
