--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/web-1.loader.js";
+      var loaderUrl = buildUrl + "/web-01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web-1.data",
-        frameworkUrl: buildUrl + "/web-1.framework.js",
-        codeUrl: buildUrl + "/web-1.wasm",
+        dataUrl: buildUrl + "/web-01.data.gz",
+        frameworkUrl: buildUrl + "/web-01.framework.js.gz",
+        codeUrl: buildUrl + "/web-01.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
