--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/web-01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web-01.data.gz",
-        frameworkUrl: buildUrl + "/web-01.framework.js.gz",
-        codeUrl: buildUrl + "/web-01.wasm.gz",
+        dataUrl: buildUrl + "/web-01.data.unityweb",
+        frameworkUrl: buildUrl + "/web-01.framework.js.unityweb",
+        codeUrl: buildUrl + "/web-01.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
