--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/web-01.data.unityweb";
+      var loaderUrl = buildUrl + "/web-01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web-01.data.unityweb",
+        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/web-01.data.unityweb",
         frameworkUrl: buildUrl + "/web-01.framework.js.unityweb",
         codeUrl: buildUrl + "/web-01.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
