--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/quest-pc.loader.js";
+      var loaderUrl = buildUrl + "/q-pc.loader.js";
       var config = {
-        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/quest-pc.data.unityweb",
-        frameworkUrl: buildUrl + "/quest-pc.framework.js.unityweb",
-        codeUrl: buildUrl + "/quest-pc.wasm.unityweb",
+        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/q-pc.data.unityweb",
+        frameworkUrl: buildUrl + "/q-pc.framework.js.unityweb",
+        codeUrl: buildUrl + "/q-pc.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
