--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/q-pc.loader.js";
+      var loaderUrl = buildUrl + "/quest-pc-v1.3.loader.js";
       var config = {
-        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/q-pc.data.unityweb",
-        frameworkUrl: buildUrl + "/q-pc.framework.js.unityweb",
-        codeUrl: buildUrl + "/q-pc.wasm.unityweb",
+        dataUrl: buildUrl + "/quest-pc-v1.3.data.unityweb",
+        frameworkUrl: buildUrl + "/quest-pc-v1.3.framework.js.unityweb",
+        codeUrl: buildUrl + "/quest-pc-v1.3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
-        productVersion: "0.0.6",
+        productVersion: "0.0.8",
         showBanner: unityShowBanner,
       };
 
