--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/quest-pc-v1.3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/quest-pc-v1.3.data.unityweb",
+        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/quest-pc-v1.3.data.unityweb",
         frameworkUrl: buildUrl + "/quest-pc-v1.3.framework.js.unityweb",
         codeUrl: buildUrl + "/quest-pc-v1.3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
