--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/quest-pc-v1.3.loader.js";
+      var loaderUrl = buildUrl + "/quest-pc-cheat.loader.js";
       var config = {
-        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/quest-pc-v1.3.data.unityweb",
-        frameworkUrl: buildUrl + "/quest-pc-v1.3.framework.js.unityweb",
-        codeUrl: buildUrl + "/quest-pc-v1.3.wasm.unityweb",
+        dataUrl: buildUrl + "/quest-pc-cheat.data.unityweb",
+        frameworkUrl: buildUrl + "/quest-pc-cheat.framework.js.unityweb",
+        codeUrl: buildUrl + "/quest-pc-cheat.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
