--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/quest.loader.js";
+      var loaderUrl = buildUrl + "/6a25551a8414f1eccb15646761f4edf1.loader.js";
       var config = {
         arguments: [],
-        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/quest.data.unityweb",
-        frameworkUrl: buildUrl + "/quest.framework.js.unityweb",
-        codeUrl: buildUrl + "/quest.wasm.unityweb",
+        dataUrl: buildUrl + "/9b1843e2d403cef94c1266cbc14edf11.data.unityweb",
+        frameworkUrl: buildUrl + "/381c1b5d3a75021f152c1ed697524e22.framework.js.unityweb",
+        codeUrl: buildUrl + "/d1889783e68f8eb327cee4ea112769b7.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
-        productVersion: "1.4",
+        productVersion: "1.5",
         showBanner: unityShowBanner,
       };
 
