--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       var loaderUrl = buildUrl + "/6a25551a8414f1eccb15646761f4edf1.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/9b1843e2d403cef94c1266cbc14edf11.data.unityweb",
+        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/9b1843e2d403cef94c1266cbc14edf11.data.unityweb",
         frameworkUrl: buildUrl + "/381c1b5d3a75021f152c1ed697524e22.framework.js.unityweb",
         codeUrl: buildUrl + "/d1889783e68f8eb327cee4ea112769b7.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
