--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/29eccf74f2d9bbc5cb9bde89aa70811d.loader.js";
+      var loaderUrl = buildUrl + "/quest.loader.js";
       var config = {
         arguments: [],
-        dataUrl: "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/3a205970ffe252c628647ba4771ada64.data.unityweb",
-        frameworkUrl: buildUrl + "/381c1b5d3a75021f152c1ed697524e22.framework.js.unityweb",
-        codeUrl: buildUrl + "/d1889783e68f8eb327cee4ea112769b7.wasm.unityweb",
+        dataUrl:  "https://media.githubusercontent.com/media/swytapp/q-demo/main/Build/quest.data.unityweb",
+        frameworkUrl: buildUrl + "/quest.framework.js.unityweb",
+        codeUrl: buildUrl + "/quest.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SwyTapp",
         productName: "Zerpaay Epic Quest",
